Where "NUMBER" is the bug number.

There are always more changes than listed here, these are just the
highlights. The full CVS log is available at www.xchat.org/cvslog/

------------------------------------------------------------------------------
 2.x.x - DD/MMM/2006
------------------------------------------------------------------------------

 - Updated translations (cs, de, hu).
 - Added partial support for numeric 005 token ELIST (min users only).
 - Brand new channel list window: GtkTreeView, nicer layout, less CPU power
   when downloading very large list, uses less memory, supports regexp/
   patternmatch/substring search and supports downloading LIST with minusers to
   save time (only on some networks that support ELIST).
 - Overhauled URL opening on Unix, it now tries xdg-open first, then auto-
   detects Gnome or KDE to run gnome-open or kfmclient. URLs with quotes
   should also work now (changed to execv()).
 - Settings: Warn the user when trying to put the tree on the top/bottom.
 - DCC ack reading
 - Tray
 - Req GTK 2.10
 - Channel modes are no longer shown in the titlebar if they contain a key.
 - 
 - 
 - 
 - Perl (Lian Wan Situ)
  * Fixed hook_command so that it won't override the help message for builtin
    commands unless a help message was specified.
  * Perl Win32: Warn the user about trying to load 64-bit ActivePerl.


------------------------------------------------------------------------------
 2.6.8 - 16/Oct/2006
------------------------------------------------------------------------------

 - Updated translations (be, de, el, es, fi, hu, it, ja, lt, pt, ru, sv, vi).
 - Removed "xchat-remote" and "dbus.so", it's now apart of the "xchat" binary.
   There is now a new dbus interface, see src/common/dbus/README for details.
   (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.