@@ -38,7 +38,7 @@ margin-right: 32px;
 <h1>XChat 2.0 Plugin Interface</h1>
 
 <small>
-<font size="-12">plugin20.html revision 2.66</font>
+<font size="-12">plugin20.html revision 2.80</font>
 <br>Latest version of this document is available at: <a href="http://xchat.org/docs/plugin20.html">http://xchat.org/docs/plugin20.html</a></small>
 
 <h2>1. Documentation:</h2>
@@ -809,6 +809,7 @@ Changed in 2.6.1. If servname is NULL, it finds the channel (or query) by the gi
 	<tr><td width="18%">away</td><td>away reason or NULL if you are not away.</td></tr>
 	<tr><td>channel</td><td>current channel name.</td></tr>
 	<tr><td>charset</td><td>character-set used in the current context (since 2.4.2).</td></tr>
+	<tr><td>event_text &lt;name></td><td>text event format string for <i>name</i> (since 2.8.0).</td></tr>
 	<tr><td>host</td><td>real hostname of the server you connected to.</td></tr>
 	<tr><td>inputbox</td><td>the input-box contents, what the user has typed (since 2.4.1).</td></tr>
 	<tr><td>libdirfs</td><td>library directory. e.g. /usr/lib/xchat. The same directory used for auto-loading plugins (since 2.4.0).<small>This string isn't necessarily UTF-8, but local file system encoding.</small></td></tr>
