@@ -961,8 +961,12 @@ const char *
 xchat_get_info (xchat_plugin *ph, const char *id)
 {
 	session *sess;
-	guint32 hash = str_hash (id);
+	guint32 hash;
 
+	if (!strncmp (id, "event_text", 9))
+		return text_find_text_fmt ((char *)id + 10);
+
+	hash = str_hash (id);
 	/* do the session independant ones first */
 	switch (hash)
 	{
